fix: removed the zoom on mobile when clicking on inputs and logging in, also used the same checkbox for the remember me checkbox as the report one

--- a/src/components/login/styles/Login.module.css
+++ b/src/components/login/styles/Login.module.css
@@ -58,3 +58,15 @@
     flex-direction: column;
     gap: 16px;
 }
+
+.checkboxButton {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    input {
+        width: 1.25rem;
+        height: 1.25rem;
+        accent-color: var(--color-primary);
+        color: white;
+    }
+}
